# Autonomous-RoomBooking

./: .gitignore  CMakeLists.txt  COEN-445-DataModel.drawio  README.md
Client/client_app/: client_app.sln
Client/client_app/client_app/: app_config.h  client_app.cpp  client_app.vcxproj  client_app.vcxproj.filters  dbHelper.cpp  dbHelper.h  db_helper.cpp  db_helper.h  example_functions.cpp  global_variables.cpp  json_messages.cpp  json_messages.h  jsonmsg.h  logger.cpp  logger.h  logger_example.cpp  main_functions.cpp  main_functions.h  meeting.cpp  meeting.h  messages.pb.h  pch.h  process_messages.cpp  process_messages.h  project_examples.cpp  queueHelper.cpp  queueHelper.h  syntax_examples.cpp  time_day_room.cpp  time_day_room.h  user.cpp  user.h
Client/client_app/client_app/x64/Debug/: RCa17220  vc141.idb
Client/client_app/enc_temp_folder/7357dd5785cdb9e81a6458da5ec3cc1d/: syntax_examples.cpp
Client/client_app/x64/Debug/local_storage/: db.json  (+1 more)
Proto/: generate_proto_file.bat  messages.proto
Server/server_app/: server_app.sln
Server/server_app/server_app/: ClassDiagram1.cd  app_config.cpp  app_config.h  dbHelper.cpp  dbHelper.h  db_helper.cpp  db_helper.h  json_messages.cpp  json_messages.h  logger.cpp  logger.h  main_headers.h  meeting.cpp  meeting.h  messages.pb.cc  messages.pb.h  pch.h  process_messages.cpp  process_messages.h  queueHelper.cpp  queueHelper.h  read_msgs.cpp  read_msgs.hpp  server_app.cpp  server_app.vcxproj  server_app.vcxproj.filters  socket_messages.cpp  socket_messages.h
Server/server_app/server_app/local_storage/: db.json
(+18 files in other folders)
